Fixed responsive alignment in shrunk(mobile) mode

--- a/grid-junior/src/Grid/GridBody/GridHeader/Column.scss
+++ b/grid-junior/src/Grid/GridBody/GridHeader/Column.scss
@@ -69,11 +69,3 @@
     flex: 0 0 30rem;
     flex: 2;
 }
-
-@media (max-width: 80rem){
-
-}
-
-@media (max-width: 60rem){
-
-}
